[package]
name = "hng-rust-endpoint-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
chrono = "0.4.30"
futures-util = "0.3.28"
actix-rt = "2.9.0"